# expassword_argon2

./: CMakeLists.txt  README.md  mix.exs
lib/: expassword_argon2.ex
lib/expassword_argon2/: application.ex  base.ex
src/: CMakeLists.txt  FindArgon2.cmake  argon2_nif.c  atoms.h  parsenum.c  parsenum.h
test/: base_hash_nif_test.exs  get_options_test.exs  hash_test.exs  needs_rehash_test.exs  reference_test.exs  valid_test.exs  verify_test.exs
